--- a/_posts/thesis_chapters/2025-6-5-Design_v10.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v10.md
@@ -258,16 +258,18 @@ In the development period following P1, I reflected on the tension between learn
 
 In response, I developed several new artefacts intended to scaffold project navigation and reduce the bottleneck of real-time technical support.
 
-The previous section outlined the introduction of a half-baked template and the UMC (Use–Modify–Create) approach had the unintended consequence of reducing the average size of working groups. One result of this shift was a rise in individual projects, which in turn increased demand on my time as a technical troubleshooter. While the in-tool scaffolding provided by the code template accelerated production for most learners [@laurillard2020significance], participants still required support when adding new code structures, particularly during the _Create_ stage of UMC.
+The introduction of a game template approach had the unintended consequence of reducing the average size of working groups thus increasing individual coding project  projects, which in turn increased demand on my time as a technical troubleshooter. While the in-tool scaffolding provided by the code template accelerated production for most learners [@laurillard2020significance], participants still required support when adding new code structures, particularly during the _Create_ stage of UMC.
 
 
 
 #### Surfaced tensions and framed contradiction
 
-In P1, I struggled reconcile a responsive approach to providing support and documentation with requests from some parents in the feedback on P1, asking for background concepts and explanations of coding constructs. Another recurring tension noted in my journal during this period concerned the clash between divergent participant learning paths and the need for facilitator-led instruction and support. This was compounded by resistance to whole-class input, which consistently yielded low engagement. I surmised that participants saw these attempts as class teaching as not immediately relevant, misaligned with learners’ preferred hands-on working styles, and disruptive to the flow of their making. Repenning et al. [@repenning_scalable_2015], as discussed in Chapter 2, frame this as a barrier arising from a principles-first approach. The challenge became how to support progress given my limited facilitator time, without resorting to step-by-step instructional documentation.
+In P1, I struggled reconcile a responsive approach to providing support and documentation with requests from some parents in the feedback on P1, asking for background concepts and explanations of coding constructs.
 
-Together, these challenges point to a contradiction between the object of the activity (learner-led game creation using flexible tools) and the evolving rules and mediating artefacts intended to support that process. The activity system lacked a shared, structured way for participants to orient themselves in the development process or to reuse successful code patterns without facilitator mediation. The flexibility of the environment became a source of friction, not just a space for exploration.
+Another recurring tension noted in my journal during this period concerned the clash between divergent participant learning paths and the need for facilitator-led instruction and support. This was compounded by resistance to whole-class input, which consistently yielded low engagement. I surmised that participants saw these attempts as class teaching as not immediately relevant, misaligned with learners’ preferred hands-on working styles, and disruptive to the flow of their making. Repenning et al. [@repenning_scalable_2015], as discussed in Chapter 2, frame this as a barrier arising from a principles-first approach. The challenge became how to support progress given my limited facilitator time, without resorting to step-by-step instructional documentation.
 
+Together, these challenges surfaced a contradiction between the object of the activity (learner-led game creation using flexible tools) and the evolving rules and mediating artefacts intended to support that process. The activity system lacked a shared, structured way for participants to orient themselves in the process to develop or to reuse successful code patterns without facilitator mediation. The flexibility of the environment became a source of friction, not just a space for exploration.
+CLARIFY THIS FURTHER - TRY A DOUBLE BIND ANALYSIS? 
 
 #### Design response
 
