--- a/_posts/thesis_chapters/2025-6-5-Design_v12.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v12.md
@@ -331,24 +331,52 @@ LINK TO NEXT SECTION?
 
 #### Description of what happened
 
-Some participants experienced alienation during the transition to coding, stemming not only from challenges with tools but also from a sense of exclusion from the culture of coding. This aligns with research on cultural barriers in coding processes, as discussed in Chapter 2 [@kafai_constructionist_2015-1]. In P1, I had incorporated several non-coding techniques to foster positive affect and create an inclusive idioculture, aiming to reduce alienation from unfamiliar technical tools. While participant feedback on these techniques was broadly positive, accumulated tensions led one family, described in the case study Appendix 5.bee, to disengage.
+Some participants experienced alienation during the transition to coding, stemming not only from challenges with tools but also from a sense of exclusion from the culture of coding. This aligns with research on cultural barriers in coding processes, as discussed in Chapter 2 [@kafai_constructionist_2015-1]. In P1, I had incorporated several non-coding techniques to foster positive affect and create an inclusive idioculture, aiming to reduce alienation from unfamiliar technical tools.
 
-Members of this family actively participated in planning on paper and creating pixel art. However, tensions emerged when the introduced coding framework did not support a key gameplay idea: a bee avatar exploring a 3D landscape. During participant feedback, the parent expressed a preference for more hands-on exploration with the tools of production before being required to make creative decisions. This episode raised several concerns for the design. First, it underscored the fragility of learners’ positive affect during the transition from the planning and sketching phase to the coding phase. Second, it revealed the limitations of peer support, since fellow participants were often unable to address more complex coding issues independently. Finally, it highlighted a potential imbalance in facilitator attention, as participants more confident in coding sometimes created complex problems requiring significant time, which could leave others feeling less supported or valued.
+MORE ON THIS LINKED WITH RESEARCH SUPPORTING DECISIONS, ABILITY TO USE GRAPHICS, DIVERSITY OF TOOLS.
 
-Although technical challenges played a role in this disengagement, the conflict was compounded by social and cultural dimensions. The shift in the object of activity, from playful design to more technical production, exposed a misalignment between participants' creative goals and the community norms forming around coding. The tensions arising from the expectation to transition from non-coding creative activities to hands-on coding are illustrated in Figure 5.x. This diagram shows how the family’s positioning and perceived exclusion from the dominant activity structure, framed by the term “hardcore coding” (participants' phrase), became a source of contradiction.
+While participant feedback on these techniques was broadly positive, accumulated tensions ultimately caused one family to disengage.
 
+Members of this family actively participated in planning on paper and creating pixel art. However, tensions emerged when the introduced coding framework did not support a key gameplay idea: a bee avatar exploring a 3D landscape [^ab].
+
+While the family
+
+In addition,
+Previous divisions between coders and art creators no longer functioned in this stage of making.
+
+During participant feedback, the parent shared that in one session they had arrived, sat down and seen other participants grappling with the text code needed to enact planned changes. They felt alienated from this process of _hardcore coding_ (participants phrase)
+
+This episode was not isolated with this family,
+
+It is also present in other data points of research [S saying we neglected T in the first ]
+
+Second, it revealed the limitations of peer processes of division, since fellow participants were often unable to collectively address more complex coding issues independently. A feeling
+
+These reflections underscored conceptions of the fragility of learners’ positive affect during the transition from the planning and sketching phase to the coding phase. This reflects existing research on difficulty of coding and alienation.
+
+<!-- Finally, it highlighted a potential imbalance in facilitator attention, as participants more confident in coding sometimes created complex problems requiring significant time, which could leave others feeling less supported or valued. -->
+
+Although technical challenges played a role in this disengagement, the conflict was compounded by social and cultural dimensions. The shift in the object of activity, from playful design to more technical production, exposed a misalignment between participants' creative goals and the community norms forming around coding.
 
 
 #### Surfaced tensions and framed contradiction
 
-This case exemplifies a contradiction between the object of the activity, inclusive game-making allowing diverse creative contributions, and the mediating artefacts and emerging norms that required an engagement with the technical aspects of coding. As participants moved from early-stage ideation to working with the game code template, the division of labour shifted. The flexible, multimodal practices gave way to a narrower set of expected competencies, placing pressure on all participants to engage with text-based code regardless of their preferred working style. This shift introduced a double bind: to participate fully, individuals had to take up roles they may not have chosen or felt prepared for.
+This case exemplifies a contradiction between the object of the activity, inclusive game-making allowing diverse creative contributions, and the emerging norms that required an engagement with the technical aspects of coding. As participants moved from early-stage ideation to working with the game code template, the division of labour shifted. The flexible, multimodal practices gave way to a narrower set of expected competencies, placing pressure on all participants to engage with text-based code regardless of their preferred working style. This shift introduced a double bind: to participate fully, individuals had to take up roles they may not have chosen or felt prepared for as well as giving up activities
 
-![Fig 5.x – Tensions involving cultural aspects of the game-making process](./Pictures/At_tension_2_v2.png){width=95%}
+the tensions arising from the expectation to transition from non-coding creative activities to hands-on coding are illustrated in Figure 5.x. This diagram shows how the family’s perceived exclusion from the dominant activity structure, framed by the term “hardcore coding”  became a source of contradiction.
+
+![](./Pictures/At_tension_2_v2.png){width=95%}
+
+Fig 5.x – A contradiction between subject experience and the evolving involving cultural layer of the game-making activity - CHANGE TO A CONTRADICTION BETWEEN DOL AND SUBJECT
+
+A's family displayed the internal manifestations of this contradiction externally during the game making sessions and later during participant feedback [add footnote?].
 
 
 The coding tool and the template mediated the activity in ways that introduced new community norms, contributing to a cultural tension between the inclusive intentions of the design and the exclusive signals sent by the technical tools. This contradiction reflects a misalignment within the activity system between the tools, division of labour, and object, resulting in alienation for some participants. Addressing these tensions required rethinking not only the technical scaffolds but also the broader cultural framing of participation to adequately accommodate alternative contributions such as visual design or narrative development.
 
 #### Design response
+
+As part of feedback, the parent expressed a preference for more hands-on exploration with the tools of production before being required to make creative decisions, driving the design decisions outlined in C1 above.  EXPLORED EARLIER
 
 The following design interventions were introduced in Phases 2 and 3 to respond to these tensions. While originally developed to address practical and technical barriers, these strategies also served to realign cultural dimensions of the activity system, supporting more inclusive and flexible forms of participation.
 
@@ -373,7 +401,6 @@ In P3, I introduced a light narrative framework to scaffold participant engageme
 The side missions were designed to support playful social dynamics and to foster a sense of shared community. By encouraging participants to engage with others’ work in imaginative ways, they helped shift the focus away from individual technical mastery and towards relational creativity. In line with third-generation activity theory, these missions acted as secondary stimuli that restructured the activity context and opened up new pathways for agency development. They positioned observation, playfulness, and curiosity as legitimate ways of participating, helping to validate roles beyond that of the coder.
 
 While this section presents only a partial account of the missions and the drama-based approach, their inclusion in the design was a response to the contradictions described above. A more detailed exploration of how these elements contributed to the development of agency is provided in Chapter 7. Within the broader CHAT–DBR framework of this thesis, these missions can be understood as design artefacts that mediated both cultural and affective engagement, making space for diverse learners to see themselves as legitimate participants in the evolving game-making community.
-
 
 
 
@@ -530,6 +557,8 @@ Gilbert is the worsted name.
 [^sa]: From V.1.3 in Vignette 1 in Appendix.V I make the following opening announcement "We’ve got this one final making session next and then, if you can make it, the Monday after we can play our games and we can share them with students. We can make the students frustrated when they can’t beat our games. It’s usually quite fun. So, if we can do that - same time next week let me know. So, we’ll keep trying to help you and yes good luck everyone!"
 
 [^em]: This email included in Appendix.email is pivotal to my understanding of the limits of my role as facilitator of an open process and the need to impose limitation. At the end of the email I say "I guess the challenge is to do this so that it’s a map, with different learning directions and possibilities, but that we are all still on the same map in our groups."
+
+[^ab]: More detail of the engagement and disengagement of A's family is described in the case study Appendix 5.bee,
 
 [^1]: https://mickfuzz.github.io/makecode-platformer-101/
 [^2]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions
