--- a/_posts/thesis_chapters/2025-6-5-Design_v12.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v12.md
@@ -331,28 +331,11 @@ LINK TO NEXT SECTION?
 
 #### Description of what happened
 
-Some participants experienced alienation during the transition to coding, stemming not only from challenges with tools but also from a sense of exclusion from the culture of coding. This aligns with research on cultural barriers in coding processes, as discussed in Chapter 2 [@kafai_constructionist_2015-1]. In P1, I had incorporated several non-coding techniques to foster positive affect and create an inclusive idioculture, aiming to reduce alienation from unfamiliar technical tools.
+At times in the interventions, in line with existing research [^in], some participants experienced alienation from the process of coding. This section explores this process through the lens of a key transition in Phase 1.  Early in Phase 1, I had incorporated several non-coding techniques to foster positive affect and create an inclusive idioculture. These included: playing and analysing retro arcade and console games, drama games as session warm ups, a process drama [^pd], sketching pixel art on paper, digital pixel art creation, loosely structured ideation sessions to decide on themes, and sessions on music making and audio effects creation using accessible tools. While this wide diversity of activities was later streamlined for later phases [^sl], the initial impact of these more accessible creative on the general culture of the group appeared positive in line with existing research [kafai][peppler].  
 
-MORE ON THIS LINKED WITH RESEARCH SUPPORTING DECISIONS, ABILITY TO USE GRAPHICS, DIVERSITY OF TOOLS.
+Some participants experienced a sense of exclusion from the culture of the group during the transition from these initial activities to coding: a process now illustrated using a case study of one family. The family consisted of Anastasia, the mother, and her two daughters, one at the lower end of our 8-12 age range and one at the upper end. Members of this family actively participated in non-coding activities, tensions emerged when the introduced coding framework was introduced and the limitations became clearer. The framework of a two dimensional game did not support a key gameplay idea that the younger child had imagined in the previous ideation stage: specifically a exploring a three dimensional landscape from the point of view of a bee avatar [^ab]. This realisation was very upsetting to the child and required extensive negotiation with Anastasia leading and myself contributing to a process of explaining the limitations of our beginners coding course.  At a later stage of Phase 1 the whole family experienced alienation. As the phase had progressed, an organic division of labour had occurred with some members sticking with graphical and audio asset creation and others working on incorporating these assets and ideas into the code framework. As session progressed there was progressively less for the non-coders to do. During participant feedback, Anastasia shared that in one session they had arrived a little late, and after observing other participants around them immersed in problem solving using text code tools, felt like they were surrounded by a process of _hardcore coding_ (participants phrase) that felt disconnected from. 
 
-While participant feedback on these techniques was broadly positive, accumulated tensions ultimately caused one family to disengage.
-
-Members of this family actively participated in planning on paper and creating pixel art. However, tensions emerged when the introduced coding framework did not support a key gameplay idea: a bee avatar exploring a 3D landscape [^ab].
-
-While the family
-
-In addition,
-Previous divisions between coders and art creators no longer functioned in this stage of making.
-
-During participant feedback, the parent shared that in one session they had arrived, sat down and seen other participants grappling with the text code needed to enact planned changes. They felt alienated from this process of _hardcore coding_ (participants phrase)
-
-This episode was not isolated with this family,
-
-It is also present in other data points of research [S saying we neglected T in the first ]
-
-Second, it revealed the limitations of peer processes of division, since fellow participants were often unable to collectively address more complex coding issues independently. A feeling
-
-These reflections underscored conceptions of the fragility of learners’ positive affect during the transition from the planning and sketching phase to the coding phase. This reflects existing research on difficulty of coding and alienation.
+This experience was not isolated with this family. In my journal, I noted that group work at this stage felt disjointed with non-coders left with little to do  and a feeling that the previously playful culture was transforming into something more serious. In addition, in interview data parent Maggie noted that "I was worried we (her and other son John) neglected Toby" in relations to this stage where smaller clusters of the group grappled with code implementation of graphical, audio elements and other design element created by the wider group.
 
 <!-- Finally, it highlighted a potential imbalance in facilitator attention, as participants more confident in coding sometimes created complex problems requiring significant time, which could leave others feeling less supported or valued. -->
 
@@ -361,18 +344,29 @@ Although technical challenges played a role in this disengagement, the conflict 
 
 #### Surfaced tensions and framed contradiction
 
-This case exemplifies a contradiction between the object of the activity, inclusive game-making allowing diverse creative contributions, and the emerging norms that required an engagement with the technical aspects of coding. As participants moved from early-stage ideation to working with the game code template, the division of labour shifted. The flexible, multimodal practices gave way to a narrower set of expected competencies, placing pressure on all participants to engage with text-based code regardless of their preferred working style. This shift introduced a double bind: to participate fully, individuals had to take up roles they may not have chosen or felt prepared for as well as giving up activities
-
-the tensions arising from the expectation to transition from non-coding creative activities to hands-on coding are illustrated in Figure 5.x. This diagram shows how the family’s perceived exclusion from the dominant activity structure, framed by the term “hardcore coding”  became a source of contradiction.
+These reflections show the fragility of learners’ positive affect and the possibility of alienation during the transition from the planning and sketching phase to the coding phase. They exemplify a contradiction between the object of the activity, inclusive game-making allowing diverse creative contributions, and the cultural layer of activity [@engestrom_activity_1999].
 
 ![](./Pictures/At_tension_2_v2.png){width=95%}
 
 Fig 5.x – A contradiction between subject experience and the evolving involving cultural layer of the game-making activity - CHANGE TO A CONTRADICTION BETWEEN DOL AND SUBJECT
 
-A's family displayed the internal manifestations of this contradiction externally during the game making sessions and later during participant feedback [add footnote?].
+The tensions arising from the expectation to transition from non-coding creative activities to hands-on coding are illustrated in Figure 5.x.
+
+Specific tensions include the emerging norms requiring a close engagement with the technical aspects of coding and a shift in division of labour prioritising these aspects.  As participants moved from early-stage ideation, and asset creation, the flexible, diverse, and decentralised working practices gave way to a narrower set of expected competencies. This shift introduced a double bind: to participate fully, some individuals would need to engage with text-based code regardless of their preferred working style.  
+
+Exclusion from the dominant cultural dimensions of  activity, framed by the term “hardcore coding”  became an entrenched area of of contradiction, despite a learning environment which included diverse and inclusive elements informed by previous research [^in].
+
+roles they may not have chosen or felt prepared for as well and .
 
 
-The coding tool and the template mediated the activity in ways that introduced new community norms, contributing to a cultural tension between the inclusive intentions of the design and the exclusive signals sent by the technical tools. This contradiction reflects a misalignment within the activity system between the tools, division of labour, and object, resulting in alienation for some participants. Addressing these tensions required rethinking not only the technical scaffolds but also the broader cultural framing of participation to adequately accommodate alternative contributions such as visual design or narrative development.
+Addressing these tensions required rethinking not only the technical scaffolds but also the broader cultural framing of participation to adequately accommodate alternative contributions such as visual design or narrative development.
+
+<!-- A's family displayed the internal manifestations of this contradiction externally during the game making sessions and later during participant feedback [add footnote?]. -->
+
+
+<!-- The coding tool and the template mediated the activity in ways that introduced new community norms, contributing to a cultural tension between the inclusive intentions of the design and the exclusive signals sent by the technical tools. This contradiction reflects a misalignment within the activity system between the tools, division of labour, and object, resulting in alienation for some participants.  -->
+
+
 
 #### Design response
 
@@ -500,7 +494,15 @@ Gilbert is the worsted name.
 
 [^em]: This email included in Appendix.email is pivotal to my understanding of the limits of my role as facilitator of an open process and the need to impose limitation. At the end of the email I say "I guess the challenge is to do this so that it’s a map, with different learning directions and possibilities, but that we are all still on the same map in our groups."
 
-[^ab]: More detail of the engagement and disengagement of A's family is described in the case study Appendix 5.bee,
+[^ab]: More detail of the engagement and disengagement of Anastasia's family is described in the case study Appendix 5.bee,
+
+[^sl]: The immediate tension that the diverse tool set brought was in how much time playing with such a diverse set of non-coding practices took. In addition the greater diversity reduced the possibility or at least the fluency of peer learning that happened in later phases.
+
+[^pd]: A process drama is a drama activity which engages participants in a scenario in which they engage with a wider activity in role. The process drama of Phase one is explored in Appendix X.
+
+[^in]: Research by Kafai, Burke and Peppler in particular on varied approaches to address alienation to coding games has been explored in Chapter 2.
+
+
 
 [^1]: https://mickfuzz.github.io/makecode-platformer-101/
 [^2]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions
