--- a/_posts/thesis_chapters/2025-6-5-Design_v12.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v12.md
@@ -333,14 +333,13 @@ LINK TO NEXT SECTION?
 
 At times in the interventions, in line with existing research [^in], some participants experienced alienation from the process of coding. This section explores this process through the lens of a key transition in Phase 1.  Early in Phase 1, I had incorporated several non-coding techniques to foster positive affect and create an inclusive idioculture. These included: playing and analysing retro arcade and console games, drama games as session warm ups, a process drama [^pd], sketching pixel art on paper, digital pixel art creation, loosely structured ideation sessions to decide on themes, and sessions on music making and audio effects creation using accessible tools. While this wide diversity of activities was later streamlined for later phases [^sl], the initial impact of these more accessible creative on the general culture of the group appeared positive in line with existing research [kafai][peppler].  
 
-Some participants experienced a sense of exclusion from the culture of the group during the transition from these initial activities to coding: a process now illustrated using a case study of one family. The family consisted of Anastasia, the mother, and her two daughters, one at the lower end of our 8-12 age range and one at the upper end. Members of this family actively participated in non-coding activities, tensions emerged when the introduced coding framework was introduced and the limitations became clearer. The framework of a two dimensional game did not support a key gameplay idea that the younger child had imagined in the previous ideation stage: specifically a exploring a three dimensional landscape from the point of view of a bee avatar [^ab]. This realisation was very upsetting to the child and required extensive negotiation with Anastasia leading and myself contributing to a process of explaining the limitations of our beginners coding course.  At a later stage of Phase 1 the whole family experienced alienation. As the phase had progressed, an organic division of labour had occurred with some members sticking with graphical and audio asset creation and others working on incorporating these assets and ideas into the code framework. As session progressed there was progressively less for the non-coders to do. During participant feedback, Anastasia shared that in one session they had arrived a little late, and after observing other participants around them immersed in problem solving using text code tools, felt like they were surrounded by a process of _hardcore coding_ (participants phrase) that felt disconnected from. 
+Some participants experienced a sense of exclusion from the culture of the group during the transition from these initial activities to coding: a process now illustrated using a case study of one family. The family consisted of Anastasia, the mother, and her two daughters, one at the lower end of our 8-12 age range and one at the upper end. Members of this family actively participated in non-coding activities, tensions emerged when the introduced coding framework was introduced and the limitations became clearer. The framework of a two dimensional game did not support a key gameplay idea that the younger child had imagined in the previous ideation stage: specifically a exploring a three dimensional landscape from the point of view of a bee avatar [^ab]. This realisation was very upsetting to the child and required extensive negotiation with Anastasia leading and myself contributing to a process of explaining the limitations of our beginners coding course.  At a later stage of Phase 1 the whole family experienced alienation. As the phase had progressed, an organic division of labour had occurred with some members sticking with graphical and audio asset creation and others working on incorporating these assets and ideas into the code framework. As session progressed there was progressively less for the non-coders to do. During participant feedback, Anastasia shared that in one session they had arrived a little late, and after observing other participants around them immersed in problem solving using text code tools, felt like they were surrounded by a process of _hardcore coding_ (participants phrase) that felt disconnected from.
 
-This experience was not isolated with this family. In my journal, I noted that group work at this stage felt disjointed with non-coders left with little to do  and a feeling that the previously playful culture was transforming into something more serious. In addition, in interview data parent Maggie noted that "I was worried we (her and other son John) neglected Toby" in relations to this stage where smaller clusters of the group grappled with code implementation of graphical, audio elements and other design element created by the wider group.
+This experience was not isolated with this family.  In interview data parent Maggie noted that "I was worried we (her and other son John) neglected Toby" in relations to this stage where smaller clusters of the group grappled with code implementation of graphical, audio elements and other design element created by the wider group. In addition, in my journal, I noted that group work at this stage felt disjointed with non-coders left with little to do  and a feeling that the previously playful culture was transforming into something more serious.
+
+
 
 <!-- Finally, it highlighted a potential imbalance in facilitator attention, as participants more confident in coding sometimes created complex problems requiring significant time, which could leave others feeling less supported or valued. -->
-
-Although technical challenges played a role in this disengagement, the conflict was compounded by social and cultural dimensions. The shift in the object of activity, from playful design to more technical production, exposed a misalignment between participants' creative goals and the community norms forming around coding.
-
 
 #### Surfaced tensions and framed contradiction
 
@@ -356,14 +355,13 @@ Specific tensions include the emerging norms requiring a close engagement with t
 
 Exclusion from the dominant cultural dimensions of  activity, framed by the term “hardcore coding”  became an entrenched area of of contradiction, despite a learning environment which included diverse and inclusive elements informed by previous research [^in].
 
-roles they may not have chosen or felt prepared for as well and .
+Although issues of mediation of technical tools played a role in this disengagement, this section has tensions address cultural dimensions.  
 
+The shift in the object of activity, from playful design to more technical production, exposed a misalignment between participants' creative goals and the community norms forming around coding.
 
-Addressing these tensions required rethinking not only the technical scaffolds but also the broader cultural framing of participation to adequately accommodate alternative contributions such as visual design or narrative development.
+Addressing these tensions required rethinking not only the technical scaffolds but also the broader cultural framing of participation to accommodate the contributions involving visual design, sound production, and narrative development in an an on-going fashion.
 
 <!-- A's family displayed the internal manifestations of this contradiction externally during the game making sessions and later during participant feedback [add footnote?]. -->
-
-
 <!-- The coding tool and the template mediated the activity in ways that introduced new community norms, contributing to a cultural tension between the inclusive intentions of the design and the exclusive signals sent by the technical tools. This contradiction reflects a misalignment within the activity system between the tools, division of labour, and object, resulting in alienation for some participants.  -->
 
 
