--- a/_posts/thesis_chapters/2025-6-5-Design_v12.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v12.md
@@ -343,23 +343,18 @@ This experience was not isolated with this family.  In interview data parent Mag
 
 #### Surfaced tensions and framed contradiction
 
-These reflections show the fragility of learners’ positive affect and the possibility of alienation during the transition from the planning and sketching phase to the coding phase. They exemplify a contradiction between the object of the activity, inclusive game-making allowing diverse creative contributions, and the cultural layer of activity [@engestrom_activity_1999].
+These reflections show the fragility of learners’ positive affect and the possibility of alienation during the transition from the planning and sketching phase to the coding phase. They exemplify a contradiction between the object of the activity, inclusive game-making allowing diverse creative contributions, and the cultural layer of activity [@engestrom_activity_1999]. Inherent tensions within this contradiction include the emerging norms requiring a close engagement with the technical aspects of coding and a shift in division of labour prioritising these aspects. Exclusion from the dominant cultural dimensions of  activity, framed by the term “hardcore coding”  became an entrenched area of of contradiction, despite a learning environment which included diverse and inclusive elements informed by previous research [^in]. As participants moved from early-stage ideation, and asset creation, the flexible, diverse, and decentralised working practices gave way to a narrower set of expected competencies. To participate fully, some individuals would need to engage with text-based code regardless of their preferred working style and given that coding activities were on going by others attempts to incorporate these team members at this stage would be disruptive to those existing divisions of labour.    
+
+The accumulated contradiction is illustrated in Figure 5.x.
 
 ![](./Pictures/At_tension_2_v2.png){width=95%}
 
 Fig 5.x – A contradiction between subject experience and the evolving involving cultural layer of the game-making activity - CHANGE TO A CONTRADICTION BETWEEN DOL AND SUBJECT
 
-The tensions arising from the expectation to transition from non-coding creative activities to hands-on coding are illustrated in Figure 5.x.
+This conflict represents a double bind which is while particular to this phase of the research has broader implications. The process of introducing accessible non-coding activities serves to help acculturation to game making, but if text coding is required later, this only delays potential alienation, and potentially heightens frustration if participants have invested into a process which they are later alienated from.  Addressing these tensions required rethinking not only the technical scaffolds, as outline above, but also the broader cultural framing of participation to accommodate the contributions involving visual design, sound production, and narrative development in an an on-going fashion.
 
-Specific tensions include the emerging norms requiring a close engagement with the technical aspects of coding and a shift in division of labour prioritising these aspects.  As participants moved from early-stage ideation, and asset creation, the flexible, diverse, and decentralised working practices gave way to a narrower set of expected competencies. This shift introduced a double bind: to participate fully, some individuals would need to engage with text-based code regardless of their preferred working style.  
+<!-- Although issues of mediation of technical tools played a role in this disengagement, this section has tensions address cultural dimensions.  The shift in the object of activity, from playful design to more technical production, exposed a misalignment between participants' creative goals and the community norms forming around coding. -->
 
-Exclusion from the dominant cultural dimensions of  activity, framed by the term “hardcore coding”  became an entrenched area of of contradiction, despite a learning environment which included diverse and inclusive elements informed by previous research [^in].
-
-Although issues of mediation of technical tools played a role in this disengagement, this section has tensions address cultural dimensions.  
-
-The shift in the object of activity, from playful design to more technical production, exposed a misalignment between participants' creative goals and the community norms forming around coding.
-
-Addressing these tensions required rethinking not only the technical scaffolds but also the broader cultural framing of participation to accommodate the contributions involving visual design, sound production, and narrative development in an an on-going fashion.
 
 <!-- A's family displayed the internal manifestations of this contradiction externally during the game making sessions and later during participant feedback [add footnote?]. -->
 <!-- The coding tool and the template mediated the activity in ways that introduced new community norms, contributing to a cultural tension between the inclusive intentions of the design and the exclusive signals sent by the technical tools. This contradiction reflects a misalignment within the activity system between the tools, division of labour, and object, resulting in alienation for some participants.  -->
@@ -374,9 +369,18 @@ The following design interventions were introduced in Phases 2 and 3 to respond 
 
 ##### Social coding processes
 
-As previously outlined, the introduction of a half-baked game template in Phase 2 allowed participants to work with a functioning starter game, which could be modified with minimal code changes. This significantly reduced early technical demands and opened up more varied points of entry into the activity. This change had a notable impact on the division of labour from Phase 2 onwards. Participants were increasingly able to work either individually or in small groups, often alongside family members. This helped to reduce the kind of role-based exclusions seen in the case described above, where non-coding contributions had become marginalised.
+As previously outlined, the introduction of a half-baked game template in Phase 2 allowed participants to work with a functioning starter game, which could be modified with minimal code changes. This significantly reduced early technical demands and opened up more varied points of entry into the activity. This change had a notable impact on the division of labour from Phase 2 onwards. Participants were increasingly able to work either individually or in small groups, often alongside family members. This helped to reduce the kind of role-based exclusions seen in the case described above, where non-coding contributions became marginalised as the process continued.
 
-The highlighted affordances of the template and the accompanying collection of code examples proved impactful. Despite their simplicity, these resources facilitated the creation of games with diverse and complex styles and themes. The provision of a working base project also increased the time participants spent playtesting both their own and others’ games. Video data captured instances where participants expressed frustration when errors rendered their games unplayable (see Vignette 6.1), and these moments became triggers for collaboration. In response, I prioritised timely support to ensure games remained functional and playable. By the middle of P2, playtesting had evolved into a key site of peer exchange, prompting spontaneous sharing of advice, assets, and fixes. Observing this, I recognised the potential of these interactions and, in preparation for P3, began to intervene more gently and strategically to nurture these emergent practices of social coding and mutual aid.
+In addition, the structuring of resources around an episodic process of applying one GDP after another, shifted the pattern of the design process away from a design-build-test progression in a way which allowed for more ongoing balance between coding and non-coding activities.
+
+
+The provision of a working base project also increased the time participants spent playtesting both their own and others’ games. Video data captured instances where participants expressed frustration when errors rendered their games unplayable (see Vignette 6.1), and these moments became triggers for collaboration. In response, I prioritised timely support to ensure games remained functional and playable. By the middle of P2, playtesting had evolved into a key site of peer exchange, prompting spontaneous sharing of advice, assets, and fixes. Observing this, I recognised the potential of these interactions and, in preparation for P3, began to intervene more gently and strategically to nurture these emergent practices of social coding and mutual aid.
+
+
+#### PERHAPS DROP? SHIFT FROM THIS SECTION?
+
+The highlighted affordances of the template and the accompanying collection of code examples proved impactful. Despite their simplicity, these resources facilitated the creation of games with diverse and complex styles and themes.
+
 
 ##### Use of side missions to encourage varied creative practices
 
