starting update on discussion ch.6

--- a/_posts/thesis_chapters/2025-6-6-Gdps_v1.md
+++ b/_posts/thesis_chapters/2025-6-6-Gdps_v1.md
@@ -771,8 +771,13 @@ Other characteristics and norms of the emerging idioculture stemming which stem 
 
 This discussion section discusses the complexity of the expanded object of activity and the diverse mediational uses of GDPs using a activity theory as a framework. It summarises the different uses of GDPs in a table and notes the limitations of 3GAT to represent such diversity of mediational strategies.  
 
-To address the challenge of communicating the diverse motivations and forms of activity involved, it returns to concepts of proximal flow and computational fluency present in CGD&P research.
+This discussion begins to address the challenge of communicating the diverse mediational strategies beyond the list in the table as a more accessible and practical conceptual model. 
 
+I then turn to the motivations and forms of the object of activity involved, it returns to concepts of flow and computational fluency present in CGD&P research.
+
+
+
+AND THEN SIGNPOSTS
 
 ### Addressing the use of GDPs in relation to theoretical understandings of processes of mediation and expanded objects of activity -
 
